<resources>
    <string name="app_name">Abu Dhabi</string>
    <string name="btnNext">Click Here</string>
    <string name="FPAbuDhabi">Press on Click Here to see the old Abu Dhabi and the new Abu Dhabi</string>
    <string name="greeting">Welcome to Abu Dhabi</string>
    <string name="description">Abu Dhabi image</string>
    <string name="oldnew">Press on Click Here to learn more about Abu Dhabi</string>
    <string name="old">Old Pictures</string>
    <string name="Nxt">Next</string>
    <string name="new1">New Pictures</string>
    <string name="DN">Learn More About Abu Dhabi</string>
    <string-array name="txtGroup">
        <item>Is Abu Dhabi the capital city of United Arab Emirates?</item>
        <item>Who is the ruler of Abu Dhabi?</item>
        <item>What is the population of Abu Dhabi?</item>
        <item>What is the total size of Abu Dhabi?</item>
        <item>What are the most popular places in Abu Dhabi?</item>
    </string-array>
    <string name="btnAns">Answer</string>
    <string name="txtPic">Click Next to veiw pictures of Old Abu Dhabi and New Abu Dhabi</string>
    <string name="btnbk">New Abu Dhabi</string>
    <string name="splashScreenText">Abu Dhabi</string>
    <string name="btn_play">Play</string>
    <string name="btn_videoActivity">View Video</string>
    <string name="btnBack">Go Back</string>

</resources>


