<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dubai">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DN"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        app:fontFamily="@font/artifika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/txtGroup"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btnAns"
        android:layout_width="303dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/btnAns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="299dp"
        android:layout_height="117dp"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAns" />

    <TextView
        android:id="@+id/txtPic"
        android:layout_width="202dp"
        android:layout_height="67dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtPic"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/txtPic"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.582" />

</android.support.constraint.ConstraintLayout>